istio/simpleroute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: otel-demo-route
  namespace: otel-demo
spec:
  parentRefs:
    - name: oteldemo-gateway
  rules:
    - backendRefs:
        - name: frontend-proxy
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hipstershoproute
  namespace: hipster-shop
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - backendRefs:
        - name: frontend
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: travel-advisor-azure-route
  namespace: travel-advisor-azure
spec:
  parentRefs:
    - name: travel-gateway
  rules:
    - backendRefs:
        - name: travel-advisor-azure
          port: 80
